--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,4 +15,5 @@ jobs:
           bash run x bin/iot_install --default
       - name: Run tests
         run: |
-          pytest -s -v --boards=wemos_d1_mini,esp32 --devices=laser_distance test_compilation.py
+          iot
+          pytest -s -v test_compilation.py --boards=wemos_d1_mini,esp32 --devices=laser_distance
