--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,12 +48,17 @@ jobs:
             "light_sensor_2",
             "capacity_touch",
           ]
-    name: ${{ matrix.board }} with ${{ matrix.device }}
+    name: Test ${{ matrix.board }} with ${{ matrix.device }}
     steps:
       - uses: actions/checkout@v4
-      - name: Install iotempower
-        run: bash run x bin/iot_install --default
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
+        with:
+          tags: iotempower:latest
+          push: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Test installation
-        run: iot x pytest -s -v tests/test_installations.py
-      - name: Test compilation
-        run: iot x pytest -s -v tests/test_compilation.py --boards ${{ matrix.board }} --devices ${{ matrix.device }}
+        run: docker run -it --entrypoint "/bin/bash" --rm -v "$GITHUB_WORKSPACE:/iot/data/repo" iotempower:latest -c "iot x pytest -s -v iot/tests/test_installations.py"
+      # - name: Test compilation
+      #   run: docker run --rm iotempower:latest iot x pytest -s -v tests/test_compilation.py --boards ${{ matrix.board }} --devices ${{ matrix.device }}
